apps/ai-core/litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
  namespace: ai-core

spec:
  selector:
    app: litellm

  ports:
    - port: 4000
      targetPort: 4000
